<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="455dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_7"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_8"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_9"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_div"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_4"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_5"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_6"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_mul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_mul"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_1"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_2"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_3"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_min"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="71dp">

            <Button
                android:id="@+id/button_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_point"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_0"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_equal"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_plus"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_clear"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_clear_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_clear_all"
                android:textSize="36sp"
                tools:ignore="ButtonStyle" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/btn_about"
                tools:ignore="ButtonStyle" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>